--- a/app/src/main/resources/templates/inicio.html
+++ b/app/src/main/resources/templates/inicio.html
@@ -1,28 +1,23 @@
 <!DOCTYPE HTML>
-<html>
+<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aceleradora Ágil - Esqueleto Ambulante</title>
+    <title>Aceleradora Ágil</title>
 </head>
 <body>
-<div class="agrupadora">
-    <header class="cabecalho">
-        <h1>Hospebem</h1>
-    </header>
-
-    <nav class="navegacao">
-        <ul>
-            <a href="/"><li>Início</li></a>
-            <a href="/pessoa/lista"><li>Pessoas</li></a>
-            <a href="/pessoa/cadastro"><li>Cadastrar Pessoa</li></a>
-            <a href="/solicitacao/cadastro"><li>Cadastro solicitação </li></a>
-            <a href="/solicitacao/casa/lista"><li>Lista geral de solicitações casa</li></a>
-            <a href="/solicitacao/hospital/lista"><li>Lista geral de solicitações hospital</li></a>
-            <a href="/solicitacao/gerenciaHospede/listagemHospede"><li>Gerenciar Hospede</li></a>
-            <a href="/registrar"><li>Registrar</li></a>
-        </ul>
-    </nav>
-</div>
+    <div th:include="@{/partes/cabecalhoPadrao}"/>
+    <br>
+    <div class="agrupadora">
+        <nav class="navegacao">
+            <ul>
+                <a href="/"><li>Início</li></a>
+                <a href="/bemvindo"><li>Bem vindo</li></a>
+                <a href="/solicitacao/cadastro"><li>Cadastro solicitação </li></a>
+                <a href="/solicitacao/casa/lista"><li>Lista geral de solicitações casa</li></a>
+                <a href="/solicitacao/hospital/lista"><li>Lista geral de solicitações hospital</li></a>
+                <a href="/solicitacao/gerenciaHospede/listagemHospede"><li>Gerenciar Hospede</li></a>
+                <a href="/registrar"><li>Registrar</li></a>
+            </ul>
+        </nav>
+    </div>
 </body>
 </html>
