--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -1,34 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br" xmlns:th="http://www.thymeleaf.org">
+<html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Formulario</title>
-
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.2/css/bulma.css">
-    <link href="/css/style.css" rel="stylesheet">
-    <script defer src="https://use.fontawesome.com/releases/v5.1.0/js/all.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-    <script src="https://unpkg.com/pikaday@1.7.0/pikaday.js"></script>
-    <script src="/js/validaIdade.js"></script>
-    <script src="/js/calender.js"></script>
-    <script src="/js/validaCadastroSolicitacao.js"></script>
-    <link rel="stylesheet" href="https://unpkg.com/pikaday@1.7.0/css/pikaday.css">
-
 </head>
 
 <body>
-<header>
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="/">
-                <p class="titulo-nav">HospeBem</p>
-            </a>
-        </div>
-    </nav>
-</header>
+
+<div th:include="@{/partes/cabecalhoPadrao}"/>
+
 <main>
     <div class="container">
         <div class="columns">
