<@rfelipe,@eduarda96>ajuste função data e hora

--- a/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
+++ b/app/src/main/resources/templates/solicitacao/listagens/listaSolicitacaoCasa.html
@@ -23,12 +23,11 @@
                     <strong><span>Nome:</span></strong>
                     <span th:text="${solicitacao.nome} + ' - '"></span>
                     <strong><span>Idade:</span></strong>
-                    <span th:text="${calculadoraIdade.apply(solicitacao.dataNascimento)} "></span>
+                    <span th:text="${solicitacao.dataNascimento}"></span>
                 </div>
                 <div class="">
                     <strong><span>Data de solicitação:</span></strong>
-                    <span th:text="${solicitacao.dataAtualizacao.format(formatarData)} + ' - '"></span>
-                    <span th:text="${solicitacao.dataAtualizacao.format(formatarHora)}"></span>
+                    <span th:text="${solicitacao.dataAtualizacao.format(formatarDataHora)}"></span>
                 </div>
                 <div>
                     <a th:href="@{/solicitacao/{id}/dados(id=${solicitacao.id})}">
