<@matheus-malta, @cassia11>mostra mensagem de erro na tela de login e informa usuario logado na tela de bem vindo

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -40,13 +40,24 @@
                         </div>
                     </div>
                 </div>
+        <div id="navbarBasicExample" class="navbar-menu">
+            <div class="navbar-start">
+                <a class="navbar-item" href="/">Inicio</a>
+                <a class="navbar-item" href="/solicitacao/hospital/lista"> Lista de Solicitações Hospital </a>
+            </div>
+        </div>
+        <div class="navbar-end">
+            <div class="navbar-item">
+                <div >
+                    <span class="navbar-item "> Logado como: <strong class="has-text-light" sec:authentication= "name"></strong> </span>
                 </div>
             </div>
-        </nav>
-    </header>
-
-    <main class="espaco-linhas">
-        <div class="agrupadora has-text-centered">
+        </div>
+        </div>
+    </nav>
+</header>
+<main class="espaco-linhas">
+    <div class="agrupadora has-text-centered">
 
         <h1 class="title is-1 espaco-titulo">Hospebem</h1>
         <p>Sistema de agendamento entre hospitais e a pousada <a href="https://www.viavida.org.br/" target="_blank">VIAVIDA</a>.</p>
