<@matheus-malta, @cassia11>redireciona para tela de login quando deslogar

--- a/app/src/main/resources/templates/bemvindo/bemvindo.html
+++ b/app/src/main/resources/templates/bemvindo/bemvindo.html
@@ -77,7 +77,7 @@
             <a href="/registrar"><div>Registrar</div></a>
         </div>
         <div sec:authorize="isAuthenticated()">
-            <form action="#" th:action="@{/login}" method="post">
+            <form action="#" th:action="@{/logout}" method="post">
                 <input type="submit" class="button is-medium is-outlined" value="Deslogar">
             </form>
         </div>
