--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -24,4 +24,19 @@
 
 </body>
 
+<script type="text/javascript">
+
+    document.addEventListener('DOMContentLoaded', function () {
+        let datepickerFields = document.getElementsByClassName('datepicker');
+
+        for (let i = 0; i < datepickerFields.length; i++) {
+            seletorDeData(datepickerFields[i]);
+        }
+    });
+
+    pesoCadeirante();
+
+    document.getElementById('peso').addEventListener('input', limitaCampoPeso);
+</script>
+
 </html>
