--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -52,7 +52,7 @@
                             <span>*Data de nascimento:</span>
                             <input id="dataNascimento" placeholder="Clique para selecionar uma data"
                                    type="text" class="input input-fancy datepicker-retroativo" th:field="*{dataNascimento}"
-                                   onkeypress="return false">
+                                   onkeypress="return false" autocomplete="off">
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <div class="field">
                         <div class="control">
@@ -187,7 +186,6 @@
                         </div>
                     </div>
                 </div>
-
                 <div class="column">
                     <h4 class="title subtitle is-3">Dados do Acompanhante</h4>
                     <h5 class="subtitle is-6 campo-obrigatorio">(Os campos do acompanhante 1 são obrigatórios)</h5>
@@ -203,6 +201,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="column">
                         <div class="field">
                             <div class="control">
@@ -217,6 +216,7 @@
                             </div>
                         </div>
                     </div>
+
                     <div class="column">
                         <div class="field">
                             <div class="control">
@@ -229,6 +229,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="column">
                     <div class="field">
                         <div class="control">
@@ -242,22 +243,4 @@
     </div>
 </main>
 </body>
-
-<script type="text/javascript">
-
-    document.addEventListener('DOMContentLoaded', function () {
-        var datepickerFields = document.getElementsByClassName('datepicker');
-
-        for (var i = 0; i < datepickerFields.length; i++) {
-            seletorDeData(datepickerFields[i]);
-        }
-    })
-
-    pesoCadeirante();
-
-    document.getElementById('peso').addEventListener('input', limitaCampoPeso);
-
-
-</script>
-
 </html>
