--- a/app/src/main/resources/templates/layout.html
+++ b/app/src/main/resources/templates/layout.html
@@ -24,6 +24,21 @@
 <script src="/js/calender.js"></script>
 <script src="/js/validaCadastroSolicitacao.js"></script>
 <script src="/js/validaIdade.js"></script>
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+    <script src="https://unpkg.com/pikaday@1.7.0/pikaday.js"></script>
+    <script src="/js/calender.js"></script>
+    <script src="/js/validaCadastroSolicitacao.js"></script>
+</head>
+
+<body th:replace="${content}">
+
+</body>
+
+<script>
+    registraAssistente();
+</script>
+
 <script type="text/javascript">
 
 document.addEventListener('DOMContentLoaded', function () {
