--- a/app/src/main/resources/templates/solicitacao/cadastro.html
+++ b/app/src/main/resources/templates/solicitacao/cadastro.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
-
 <head>
     <title>Formulario</title>
+
+
 </head>
 
 <body>
@@ -36,11 +37,11 @@
                         <div class="control">
                             <label>
                                 <span>*</span>
-                                <input th:field="*{genero}" type="radio" value="F" id="genero1">
+                                <input th:field="*{genero}" type="radio" value="Feminino" id="genero1">
                                 <span>Feminino</span>
                             </label>
                             <label>
-                                <input th:field="*{genero}" type="radio" value="M" id="genero2">
+                                <input th:field="*{genero}" type="radio" value="Masculino" id="genero2">
                                 <span>Masculino</span>
                             </label>
                         </div>
@@ -79,11 +80,11 @@
                         <div class="control">
                             <span>*Situação do Hóspede:</span>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pre" id="situacao.pre">
+                                <input th:field="*{situacao}" type="radio" value="pre-transplante" id="situacao.pre">
                                 <span>Pré-transplante</span>
                             </label>
                             <label>
-                                <input th:field="*{situacao}" type="radio" value="pos" id="situacao.pos">
+                                <input th:field="*{situacao}" type="radio" value="pos-transplante" id="situacao.pos">
                                 <span>Pós-transplante</span>
                             </label>
                         </div>
@@ -225,7 +226,7 @@
                         <div class="field">
                             <div class="control">
                                 <p>Data de nascimento <span th:text="${acompIndex.index + 1}"></span>:
-                                    <input placeholder="Clique para selecionar uma data" class="data-nasc-acomp input input-fancy datepicker-retroativo"
+                                    <input placeholder="Clique para selecionar uma data" class="data-nasc-acomp input input-fancy datepicker-retroativo" autocomplete="off"
                                            th:field="*{acompanhantes[__${acompIndex.index}__].dataNascimento}"
                                            onkeypress="return false;">
                                 </p>
